# Embedded-Labs

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeProject1.cpp  Emb. Sys. Lab Group 1 Report.docx  README.md  asmex.c  cmp.c  gpio_button.c  jetsonGPIO.h  lcd.cpp  task1.cpp  task2.cpp
src/: JHLEDBackpack.cpp  JHLEDBackpack.h
src/embedded_proj/: README.md
src/embedded_proj/BSP/SW4STM32/STM32F411E-Discovery/: .cproject_org  .project  .project_org
src/embedded_proj/BSP/Src/: main.c  mems.c
src/embedded_proj/Demonstrations/SW4STM32/STM32F411E-Discovery/: .cproject_org  .project  .project_org
src/embedded_proj/embedded_proj/: .mxproject  .project  embedded_proj.ioc
src/embedded_proj/embedded_proj/Core/Inc/: main.h
src/embedded_proj/embedded_proj/Core/Src/: main.c
src/lab5/: .mxproject  Lab5.ioc
src/lab5/Core/Inc/: lcd.h  main.h
src/lab5/Core/Src/: main.c
